feat: harden Android Termux runtime and Pi RPC